@@ -1,6 +1,10 @@
 devel
 -----
 
+* fix invalid results (too many) when a skipping LIMIT was used for a
+  traversal. `LIMIT x` or `LIMIT 0, x` were not affected, but `LIMIT s, x`
+  may have returned too many results
+
 * fix races in SSL communication code
 
 * fix invalid locking in JWT authentication cache, which could have
@@ -318,6 +322,10 @@ v3.2.alpha1 (2017-02-05)
 
 v3.1.23 (XXXX-XX-XX)
 --------------------
+
+* fix invalid results (too many) when a skipping LIMIT was used for a
+  traversal. `LIMIT x` or `LIMIT 0, x` were not affected, but `LIMIT s, x`
+  may have returned too many results
 
 * fix invalid first group results for sorted AQL COLLECT when LIMIT
   was used
